--- a/transform-object/main.html
+++ b/transform-object/main.html
@@ -20,7 +20,7 @@
 
       <h3 class="title is-4">Task</h3>
       <div class="content">
-        <p>Write a function that takes an object with arbitrary nesting and transforms it according to these rules:</p>
+        <p>Write a function named <code>transformObject()</code> that takes an object with arbitrary nesting and transforms it according to these rules:</p>
         <ul>
           <li>Each number is incremented by 6.</li>
           <li>Each string has “ BLARGH” concatenated onto it.</li>
