--- a/verify-input-value/main.html
+++ b/verify-input-value/main.html
@@ -4,11 +4,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <script>
-      //
-      // TODO: Implement this function.
-      //
-      const makeInputVerifier = () => {
-        return () => {}
+    const makeInputVerifier = (minimum, maximum) => {
+      if (minimum > maximum) {
+        return "ERROR"
+      }
+      return function verify(inputValue) {
+        if (inputValue < minimum) {
+          return "Input is less than minimum value";
+        } else if (inputValue > maximum) {
+          return "Input is more than maximum value";
+        } else {
+          return "Input is in range";
+        }
+      }
       }
     </script>
   </head>
